2002-12-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in: New --date option to display datestamp.
	* server-src/amstatus.pl.in: Increase some field size.
	* server-src/amstatus.pl.in: The host field adjust it's length to the
	 largest.

2002-11-27  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/amanda.h (days_diff): Don't add a half day.
	* server-src/amadmin.c: Fix for newer days_diff.
	* server-src/planner.c: Fix for newer days_diff.

2002-11-26  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* tape-src/tapetype.c: Cast time_t to long for printing.

2002-11-26  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amflush.c: Write a "amflush: start at ???" line.
	* server-src/amstatus.pl.in: parse the "amflush: start at ???" line.

2002-11-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/planner.c (delay_dumps): Use ap_snprintf.

2002-11-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/debug.c: Most of the code must in #ifdef DEBUG_CODE.
	* client-src/client_util.c: Use AMANDA_TMPDIR instead of AMANDA_DBGDIR.

2002-11-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* docs/TAPE.CHANGERS: Sync with 2.5.0
	* changer-src/chg-juke.sh.in: New changer from 2.5.0
	* changer-src/chg-rait.sh.in: New changer from 2.5.0
	* changer-src/chg-null.sh.in: New changer from 2.5.0
	* changer-src/Makefile.am: Install them.
	* configure.in (AC_CONFIG_FILES): Add chg-juke.sh.in, chg-rait.sh.in and
	  chg-null.sh.in

2002-11-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amadmin.c: Cleanup.

2002-11-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* man/amadmin.8.in: Document new --days option of balance subcommand.

2002-11-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amadmin.c (days_diff): Make next_level0 more acurate.
	* server-src/amadmin.c (balance): Improve output.
