@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: arglist.h,v 1.4.10.1 2002/02/10 03:31:53 jrjackson Exp $
+ * $Id: arglist.h,v 1.4.10.2 2002/12/03 21:36:47 martinea Exp $
  *
  * support macros for variable argument list declaration and definition
  */
@@ -80,6 +80,24 @@
 #else
 
 #include <varargs.h>
+
+#define printf_arglist_function(fdecl, hook_type, hook_name) \
+        fdecl(hook_name, va_alist)	\
+        hook_type hook_name;		\
+        va_dcl
+
+#define printf_arglist_function1(fdecl, arg1_type, arg1_name, hook_type, hook_name) \
+	fdecl(arg1_name, hook_name, va_alist)	\
+	arg1_type arg1_name;			\
+	hook_type hook_name;			\
+	va_dcl
+
+#define printf_arglist_function2(fdecl, arg1_type, arg1_name, arg2_type, arg2_name, hook_type, hook_name) \
+	fdecl(arg1_name, arg2_name, hook_name, va_alist)	\
+	arg1_type arg1_name;					\
+	arg2_type arg2_name;					\
+	hook_type hook_name;					\
+	va_dcl
 
 #define arglist_function(fdecl, hook_type, hook_name) \
         fdecl(hook_name, va_alist)	\
